force-app/main/default/objects/Lead/fields/AnnualIncome__c.field-meta.xml
<CustomField>
    <fullName>AnnualIncome__c</fullName>
    <description>The annual income of the lead.</description>
    <label>Annual income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>