force-app/main/default/objects/Lead/fields/BetaProcess__c.field-meta.xml
<CustomField>
    <fullName>BetaProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this lead will be run through any applicable beta process that is live.</description>
    <label>Beta Process</label>
    <type>Checkbox</type>
</CustomField>