force-app/main/default/objects/Lead/fields/Borrower2AnnualIncome__c.field-meta.xml
<CustomField>
    <fullName>Borrower2AnnualIncome__c</fullName>
    <description>If the lead is borrowing with someone else, this field will capture their annual income to support capturing additional details in advance of lead conversion.</description>
    <label>Borrower 2 annual income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>