force-app/main/default/objects/Lead/fields/Borrower2Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Borrower2Birthdate__c</fullName>
    <description>If the lead is borrowing with someone else, this field will capture their birthdate to support capturing additional details in advance of lead conversion.</description>
    <label>Borrower 2 birthdate</label>
    <type>Date</type>
</CustomField>