force-app/main/default/objects/Lead/fields/Borrower2FirstName__c.field-meta.xml
<CustomField>
    <fullName>Borrower2FirstName__c</fullName>
    <description>If the lead is borrowing with someone else, this field will capture their first name to support capturing additional details in advance of lead conversion.</description>
    <label>Borrower 2 first name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>