force-app/main/default/objects/Lead/fields/Borrower2LastName__c.field-meta.xml
<CustomField>
    <fullName>Borrower2LastName__c</fullName>
    <description>If the lead is borrowing with someone else, this field will capture their last name to support capturing additional details in advance of lead conversion.</description>
    <label>Borrower 2 last name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>