force-app/main/default/objects/Lead/fields/CalendlyCreated__c.field-meta.xml
<CustomField>
    <fullName>CalendlyCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lead created from calendly</description>
    <label>Calendly created</label>
    <type>Checkbox</type>
</CustomField>