force-app/main/default/objects/Lead/fields/CalendlySlug__c.field-meta.xml
<CustomField>
    <fullName>CalendlySlug__c</fullName>
    <description>If a lead is created from Calendly, the flow that creates the lead will stamp the slug here so it can be used in campaign attribution.</description>
    <label>Calendly Slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>