force-app/main/default/objects/Lead/fields/CallStatus__c.field-meta.xml
<CustomField>
    <fullName>CallStatus__c</fullName>
    <description>Captures the status of whether we have called this client.</description>
    <label>Call status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not booked</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Held</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>