force-app/main/default/objects/Lead/fields/Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Converted_Date__c</fullName>
    <description>The date at which the lead was converted to an opportunity</description>
    <label>Converted date</label>
    <type>Date</type>
</CustomField>