force-app/main/default/objects/Lead/fields/Created_Date_Mimic__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Mimic__c</fullName>
    <description>Mimics the Standard field so that we can access in it formulas and pass the data onto other objects</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Mimics the Standard field so that we can access in it formulas and pass the data onto other objects</inlineHelpText>
    <label>Created date (mimic)</label>
    <type>DateTime</type>
</CustomField>