force-app/main/default/objects/Lead/fields/Current_adviser_in_place__c.field-meta.xml
<CustomField>
    <fullName>Current_adviser_in_place__c</fullName>
    <description>Does client have an advisor in place currently</description>
    <label>Current adviser in place</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>