force-app/main/default/objects/Lead/fields/Current_Annual_Saving_Potential__c.field-meta.xml
<CustomField>
    <fullName>Current_Annual_Saving_Potential__c</fullName>
    <description>A clients current annual saving potential</description>
    <label>Current annual saving potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>