force-app/main/default/objects/Lead/fields/DataCleanAction__c.field-meta.xml
<CustomField>
    <fullName>DataCleanAction__c</fullName>
    <description>Captures that action to be taken with this lead as part of the lead data tidy up in 2024</description>
    <label>Data clean action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delete | Duplicate of client</fullName>
            </value>
            <value>
                <fullName>Duplicate | Merge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>