force-app/main/default/objects/Lead/fields/Date_Last_Lost__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Lost__c</fullName>
    <description>This is the date of the last time the lead was put to lost, either by not interested or not qualified</description>
    <inlineHelpText>This is the date of the last time the lead was put to Lost, either by Not Interested or Not Qualified</inlineHelpText>
    <label>Date last lost</label>
    <type>DateTime</type>
</CustomField>