force-app/main/default/objects/Lead/fields/Date_Not_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Date_Not_Qualified__c</fullName>
    <description>Used for Calculating days to Not Qualified</description>
    <inlineHelpText>This is automatically populated</inlineHelpText>
    <label>Date Not Qualified</label>
    <type>DateTime</type>
</CustomField>