force-app/main/default/objects/Lead/fields/Date_of_First_Contact__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Contact__c</fullName>
    <description>Date stamp for first contact on a lead - for reporting purposes</description>
    <label>Date of first contact</label>
    <type>Date</type>
</CustomField>