force-app/main/default/objects/Lead/fields/Date_Time_Assigned_to_BDM__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Assigned_to_BDM__c</fullName>
    <description>This updates each time the Lead is Assigned to a new BDM</description>
    <label>Date/Time Assigned to BDM</label>
    <type>DateTime</type>
</CustomField>