force-app/main/default/objects/Lead/fields/Date_Vulnerability_Detected__c.field-meta.xml
<CustomField>
    <fullName>Date_Vulnerability_Detected__c</fullName>
    <label>Date Vulnerability Last Assessed</label>
    <type>Date</type>
</CustomField>