force-app/main/default/objects/Lead/fields/Days_to_conversion__c.field-meta.xml
<CustomField>
    <fullName>Days_to_conversion__c</fullName>
    <formula>CEILING(
(DATETIMEVALUE(  ConvertedDate  )  - DATETIMEVALUE(DATEVALUE(CreatedDate)))/7
)</formula>
    <label>Weeks to Conversion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>