force-app/main/default/objects/Lead/fields/DB_Pension_Mentioned__c.field-meta.xml
<CustomField>
    <fullName>DB_Pension_Mentioned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers send DB triage doc</description>
    <label>DB transfer advice mentioned</label>
    <type>Checkbox</type>
</CustomField>