force-app/main/default/objects/Lead/fields/Discovery_Questionnaire_type__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Questionnaire_type__c</fullName>
    <label>Discovery Questionnaire type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joint</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>