force-app/main/default/objects/Lead/fields/Est_Liquid_Assets__c.field-meta.xml
<CustomField>
    <fullName>Est_Liquid_Assets__c</fullName>
    <description>An estimate of the leads liquid assets, from the Discovery Call</description>
    <inlineHelpText>An estimate of the leads liquid assets, from the Discovery Call</inlineHelpText>
    <label>Est liquid assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>