force-app/main/default/objects/Lead/fields/Exclude_From_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if lead should be removed from reporting</description>
    <label>Exclude from reporting</label>
    <type>Checkbox</type>
</CustomField>