force-app/main/default/objects/Lead/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <description>Store free text notes detailing relevant facts about client&apos;s family</description>
    <label>Family</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>