force-app/main/default/objects/Lead/fields/FinancialPlanningSelf__c.field-meta.xml
<CustomField>
    <fullName>FinancialPlanningSelf__c</fullName>
    <inlineHelpText>How likely are you to make and stick to a financial plan?</inlineHelpText>
    <label>Planning own finances</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I have a plan and am good at sticking to it</fullName>
            </value>
            <value>
                <fullName>I have a plan but don&#39;t always have enough money to stick to it</fullName>
            </value>
            <value>
                <fullName>I rarely make a plan but have sufficient income to cover my immediate expenses each month</fullName>
            </value>
            <value>
                <fullName>I rarely make a plan and usually run out of money before my next payday</fullName>
            </value>
            <value>
                <fullName>I don&#39;t have a plan and generally struggle with managing my money</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>