force-app/main/default/objects/Lead/fields/First_Partner_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>First_Partner_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Auto-populated. Link to the partner the lead is initially assigned to</description>
    <label>First partner assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads_and_Referrals2</relationshipName>
    <type>Lookup</type>
</CustomField>