force-app/main/default/objects/Lead/fields/Income_Wealth__c.field-meta.xml
<CustomField>
    <fullName>Income_Wealth__c</fullName>
    <description>Free text box to capture relevant facts about clients income and wealth obtained on discovery call</description>
    <label>Income &amp; wealth</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>