force-app/main/default/objects/Lead/fields/IncomeBand__c.field-meta.xml
<CustomField>
    <fullName>IncomeBand__c</fullName>
    <description>The income banding for this lead.</description>
    <label>Income band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under £50,000</fullName>
            </value>
            <value>
                <fullName>£50,000 - £200,000</fullName>
            </value>
            <value>
                <fullName>£200,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>