force-app/main/default/objects/Lead/fields/InterestInFinancialAdvice__c.field-meta.xml
<CustomField>
    <fullName>InterestInFinancialAdvice__c</fullName>
    <description>Captures whether the respondent is interested in having an ongoing advice relationship.</description>
    <inlineHelpText>Is the lead interested in a long term financial advice relationship?</inlineHelpText>
    <label>Interest in financial advice planning</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Interested on second prompt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>