force-app/main/default/objects/Lead/fields/Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity__c</fullName>
    <description>Date the last activity was completed</description>
    <label>Last activity</label>
    <type>Date</type>
</CustomField>