force-app/main/default/objects/Lead/fields/Last_BDM__c.field-meta.xml
<CustomField>
    <fullName>Last_BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows the BDM who last held the lead. This is populated when a lead is put to Not Interested or Not Qualified.</description>
    <label>Last BDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads_and_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>