force-app/main/default/objects/Lead/fields/Last_Partner_Assign_to__c.field-meta.xml
<CustomField>
    <fullName>Last_Partner_Assign_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the name of the partner that the lead was last assigned to. This is updated each time a lead is assigned to a new partner.</description>
    <inlineHelpText>Holds the name of the partner that the lead was last assigned to. This is updated each time a lead is assigned to a new partner.</inlineHelpText>
    <label>Last partner assign to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads_and_Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>