force-app/main/default/objects/Lead/fields/Lead_number__c.field-meta.xml
<CustomField>
    <fullName>Lead_number__c</fullName>
    <description>Auto number of lead</description>
    <displayFormat>{0}</displayFormat>
    <label>Lead number</label>
    <type>AutoNumber</type>
</CustomField>