force-app/main/default/objects/Lead/fields/Lead_Source_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Category__c</fullName>
    <description>Formula to categorise lead source</description>
    <formula>CASE(LeadSource,
&quot;Partner Generated&quot;,&quot;Partner&quot;, 
&quot;BDM LinkedIn&quot;,&quot;Partner&quot;, 
&quot;Employee Referral&quot;,&quot;Partner&quot;, 
&quot;Event&quot;,&quot;Partner&quot;,
&quot;Client Referral&quot;,&quot;Partner&quot;,
&quot;BDM Self Sourced&quot;,&quot;Partner&quot;, 
&quot;Purchased List&quot;,&quot;Digital&quot;,
&quot;NHS Pension Guide&quot;,&quot;Digital&quot;,
&quot;Direct Traffic&quot;,&quot;Digital&quot;,
&quot;Organic Search&quot;,&quot;Digital&quot;,
&quot;Organic Social&quot;,&quot;Digital&quot;,
&quot;Paid Search&quot;,&quot;Digital&quot;,
&quot;Paid Social&quot;,&quot;Digital&quot;,
&quot;facebook&quot;,&quot;Digital&quot;, 
&quot;adwords&quot;,&quot;Digital&quot;, 
&quot;Google AdWords&quot;,&quot;Digital&quot;,
&quot;LinkedIn&quot;,&quot;Digital&quot;, 
&quot;Social Media&quot;,&quot;Digital&quot;,
&quot;Display&quot;,&quot;Digital&quot;,
&quot;Offline Sources&quot;,&quot;Digital&quot;,
&quot;Native Content&quot;,&quot;Digital&quot;,
&quot;Referral Traffic&quot;,&quot;Digital&quot;,
&quot;Hatch Referral&quot;,&quot;Offline&quot;,
&quot;Mortgage Referral&quot;,&quot;Offline&quot;,
&quot;Unknown&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead source category</label>
    <type>Text</type>
</CustomField>