force-app/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <description>All new leads are initial leads. Leads that have already been attempted and put to &quot;No Further Action&quot; will be put into the Cool base.</description>
    <inlineHelpText>All new leads are Initial leads. Leads that have already been attempted and put to &quot;No Further Action&quot; will be put into the Cool base.</inlineHelpText>
    <label>Lead base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
                <default>true</default>
                <label>Initial</label>
            </value>
            <value>
                <fullName>Cool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>