force-app/main/default/objects/Lead/fields/LeadNotes__c.field-meta.xml
<CustomField>
    <fullName>LeadNotes__c</fullName>
    <description>A space to capture free text notes from a lead.</description>
    <inlineHelpText>Notes provided by the lead when they submitted their details</inlineHelpText>
    <label>Lead notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>