force-app/main/default/objects/Lead/fields/LeadSourceNotes__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceNotes__c</fullName>
    <description>Optional place for the partner to capture notes in relation to the lead source.</description>
    <label>Lead source notes</label>
    <type>TextArea</type>
</CustomField>