force-app/main/default/objects/Lead/fields/LegacyLead__c.field-meta.xml
<CustomField>
    <fullName>LegacyLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, a number of validation rules won&apos;t apply so that the lack of data on these is not a blocker to other updates.</description>
    <label>Legacy lead</label>
    <type>Checkbox</type>
</CustomField>