force-app/main/default/objects/Lead/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <description>Field that automatically populates with name inputted at lead generation. Can be altered if name given to start is not legal name.</description>
    <label>Legal name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>