force-app/main/default/objects/Lead/fields/Lost_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lost_Notes__c</fullName>
    <description>Free text to capture why client no longer wants to move forward</description>
    <label>Lost notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>