force-app/main/default/objects/Lead/fields/Lost_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reasons__c</fullName>
    <description>Reason why client no longer wants to move forward with Nova.</description>
    <inlineHelpText>Select as many as apply</inlineHelpText>
    <label>Lost reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lost_Reasons</valueSetName>
    </valueSet>
</CustomField>