force-app/main/default/objects/Lead/fields/ManagingMoneyComfort__c.field-meta.xml
<CustomField>
    <fullName>ManagingMoneyComfort__c</fullName>
    <inlineHelpText>How comfortable do you feel about managing your money?</inlineHelpText>
    <label>Comfort managing money</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>