force-app/main/default/objects/Lead/fields/MarketingOptIn__c.field-meta.xml
<CustomField>
    <fullName>MarketingOptIn__c</fullName>
    <description>New field to be used to track if someone is opted in for marketing. This field is synchronised with Pardot.</description>
    <label>Marketing opt in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>