force-app/main/default/objects/Lead/fields/MarketingPhone__c.field-meta.xml
<CustomField>
    <fullName>MarketingPhone__c</fullName>
    <description>Captures whether we have an opt in or out for marketing via phone.</description>
    <label>Phone marketing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt in</fullName>
            </value>
            <value>
                <fullName>Opt out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>