force-app/main/default/objects/Lead/fields/Meeting_Booked_on_Discovery_Call__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Booked_on_Discovery_Call__c</fullName>
    <description>Meeting booked on discovery call</description>
    <label>Meeting booked on discovery call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>