force-app/main/default/objects/Lead/fields/mortgageRateExpired__c.field-meta.xml
<CustomField>
    <fullName>mortgageRateExpired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if mortgage rate has expired</description>
    <label>Mortgage rate expired</label>
    <type>Checkbox</type>
</CustomField>