force-app/main/default/objects/Lead/fields/Next_Activity__c.field-meta.xml
<CustomField>
    <fullName>Next_Activity__c</fullName>
    <description>Date of next activity</description>
    <label>Next activity</label>
    <type>Date</type>
</CustomField>