force-app/main/default/objects/Lead/fields/Non_standard_Issues__c.field-meta.xml
<CustomField>
    <fullName>Non_standard_Issues__c</fullName>
    <description>Free text to flag any non standard issues to raise</description>
    <label>Non-standard issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>