force-app/main/default/objects/Lead/fields/Not_Qualified_Level__c.field-meta.xml
<CustomField>
    <fullName>Not_Qualified_Level__c</fullName>
    <description>Capture if client is on track to qualify given current trajectory so we can reach out in the future</description>
    <label>Not qualified level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Will never qualify</fullName>
            </value>
            <value>
                <fullName>May qualify soon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>