force-app/main/default/objects/Lead/fields/Number_of_Calls__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Calls__c</fullName>
    <description>The number of calls made to the lead over its lifetime</description>
    <inlineHelpText>The number of calls made to the lead over its lifetime</inlineHelpText>
    <label>Number of Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>