force-app/main/default/objects/Lead/fields/OW_amount_to_borrow__c.field-meta.xml
<CustomField>
    <fullName>OW_amount_to_borrow__c</fullName>
    <description>Mortgage leads. Amount client is interested in borrowing</description>
    <label>Amount to borrow</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>