force-app/main/default/objects/Lead/fields/OW_campaign_id__c.field-meta.xml
<CustomField>
    <fullName>OW_campaign_id__c</fullName>
    <label>Campaign ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>