force-app/main/default/objects/Lead/fields/OW_employment_status__c.field-meta.xml
<CustomField>
    <fullName>OW_employment_status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Semi-retired</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Not working</fullName>
            </value>
            <value>
                <fullName>Not retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>