force-app/main/default/objects/Lead/fields/OW_ga_client_id__c.field-meta.xml
<CustomField>
    <fullName>OW_ga_client_id__c</fullName>
    <description>Not used</description>
    <label>GA client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>