force-app/main/default/objects/Lead/fields/OW_has_us_conections__c.field-meta.xml
<CustomField>
    <fullName>OW_has_us_conections__c</fullName>
    <description>Indicates whether the lead has any connections to the united states</description>
    <label>Has US Connections</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>