force-app/main/default/objects/Lead/fields/OW_mortgage_balance__c.field-meta.xml
<CustomField>
    <fullName>OW_mortgage_balance__c</fullName>
    <label>Mortgage balance</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>