force-app/main/default/objects/Lead/fields/OW_mortgage_term__c.field-meta.xml
<CustomField>
    <fullName>OW_mortgage_term__c</fullName>
    <description>Mortgage term in years</description>
    <label>Mortgage term</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>