force-app/main/default/objects/Lead/fields/OW_mortgage_type__c.field-meta.xml
<CustomField>
    <fullName>OW_mortgage_type__c</fullName>
    <description>Type of mortgage</description>
    <label>Mortgage type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OW_mortgage_type</valueSetName>
    </valueSet>
</CustomField>