force-app/main/default/objects/Lead/fields/OW_parent_lead__c.field-meta.xml
<CustomField>
    <fullName>OW_parent_lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For mortgages, we may get the details of multiple people - up to 4 - because</description>
    <label>Parent lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leads and Referrals</relationshipLabel>
    <relationshipName>Leads_and_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>