force-app/main/default/objects/Lead/fields/OW_property_value__c.field-meta.xml
<CustomField>
    <fullName>OW_property_value__c</fullName>
    <description>Value of property client is looking to take out on mortgage</description>
    <label>Property value</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>