force-app/main/default/objects/Lead/fields/OW_rent_pm__c.field-meta.xml
<CustomField>
    <fullName>OW_rent_pm__c</fullName>
    <description>To capture a lead&apos;s rent per month</description>
    <label>Rent (pm)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>