force-app/main/default/objects/Lead/fields/OW_repayment_terms__c.field-meta.xml
<CustomField>
    <fullName>OW_repayment_terms__c</fullName>
    <description>Capture repayment terms on mortgage</description>
    <label>Repayment terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OW_repayment_terms</valueSetName>
    </valueSet>
</CustomField>