force-app/main/default/objects/Lead/fields/OW_retirement_goal__c.field-meta.xml
<CustomField>
    <fullName>OW_retirement_goal__c</fullName>
    <description>The age at which the lead wishes to retire if possible</description>
    <label>Retirement goal</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>