force-app/main/default/objects/Lead/fields/OW_total_household_income__c.field-meta.xml
<CustomField>
    <fullName>OW_total_household_income__c</fullName>
    <description>The total income across the lead&apos;s whole household</description>
    <label>Total household income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>