force-app/main/default/objects/Lead/fields/PhonePardot__c.field-meta.xml
<CustomField>
    <fullName>PhonePardot__c</fullName>
    <description>Captures the phone number on record in Pardot.</description>
    <inlineHelpText>This is the number provided by the client using a marketing form. Please copy this to the mobile or phone as appropriate.</inlineHelpText>
    <label>Phone (pardot)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>