force-app/main/default/objects/Lead/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <description>Preferred name should be used if they would like to be addressed by another name.</description>
    <inlineHelpText>First name only. Lead Name should be their Legal Name. Preferred name should be used if they would like to be addressed by another name.</inlineHelpText>
    <label>Preferred name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>