force-app/main/default/objects/Lead/fields/purchaseStage__c.field-meta.xml
<CustomField>
    <fullName>purchaseStage__c</fullName>
    <description>Stage of purchase</description>
    <label>Purchase stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 months+</fullName>
            </value>
            <value>
                <fullName>Ready now</fullName>
            </value>
            <value>
                <fullName>Made an offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>