force-app/main/default/objects/Lead/fields/Qualified_Level__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Level__c</fullName>
    <label>Qualified Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>£100,000+ OMC referral</fullName>
            </value>
            <value>
                <fullName>&lt;£250,000 but will exceed in 3 years</fullName>
            </value>
            <value>
                <fullName>£250,000+</fullName>
            </value>
            <value>
                <fullName>£500,000+</fullName>
            </value>
            <value>
                <fullName>£1,000,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>