force-app/main/default/objects/Lead/fields/Qualified_Notes__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Notes__c</fullName>
    <description>Free text for partners to capture why a lead does not qualify right now</description>
    <inlineHelpText>Add as much information as you can. Even if they are not interested right now, the more we learn about the lead the more likely we are to close them in the future</inlineHelpText>
    <label>Qualified notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>