force-app/main/default/objects/Lead/fields/Reason_for_Vulnerability__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Vulnerability__c</fullName>
    <description>Free text to capture the reason why a lead has been identified as vulnerable</description>
    <label>Reason for vulnerability</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>